<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/name"
            android:textSize="20sp"
            android:padding="16dp"
            android:layout_margin="8dp"
            android:maxLength="30"
            android:inputType="textCapWords"
            android:singleLine="true"/>

        <TextView
            style="@style/headerTextStyle"
            android:fontFamily="sans-serif-condensed"
            android:padding="16dp"
            android:text="@string/adds" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/check1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:paddingRight="24dp"
                android:paddingStart="24dp"
                android:paddingLeft="24dp"
                android:text="@string/whipped"
                android:textSize="16sp" />
            <CheckBox
                android:id="@+id/check2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingStart="24dp"
                android:text="@string/choc"
                android:textSize="16sp" />


        </LinearLayout>

        <TextView
            style="@style/headerTextStyle"
            android:fontFamily="sans-serif-condensed"
            android:padding="16dp"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:onClick="decrement"
                android:text="-"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingStart="24dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:text="0"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="0dp"
                android:onClick="increment"
                android:text="+"
                android:textAllCaps="true" />

        </LinearLayout>

        <TextView
            style="@style/headerTextStyle"
            android:fontFamily="sans-serif-condensed"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp"
            android:paddingBottom="16dp"
            android:text="@string/Send_Order_title" />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp"
            android:paddingTop="0dp"
            android:paddingBottom="16dp"
            android:text="$0"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:textAllCaps="true" />


    </LinearLayout>
</ScrollView>